--- a/frontend/pointofsale/src/css/app.scss
+++ b/frontend/pointofsale/src/css/app.scss
@@ -17,3 +17,10 @@
     z-index:2;
 
 }
+
+.sidebar{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 50px auto 70px;
+}
