--- a/frontend/pointofsale/src/css/app.scss
+++ b/frontend/pointofsale/src/css/app.scss
@@ -24,3 +24,18 @@
     display: grid;
     grid-template-rows: 50px auto 70px;
 }
+
+.q-page{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows:auto 30px;
+}
+
+.kasir{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 110px auto;
+}
+
